# aware

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
data/tinystories_small/: stats.json  tinystories_val.txt
examples/: cap_native_run_benchmark.rs  run_benchmark.rs  train_with_concepts.rs
papers/: caps_primitive.md
papers/caps_primitive/: caps_primitive.md
scripts/: aggregate_benchmarks.py  fetch_tinystories.py  make_figures.py  run_benchmarks.sh  run_multi_seed.sh  run_phase_I.sh
src/: lib.rs
src/aware/: concept.rs  concept_layer.rs  config.rs  embed.rs  mod.rs  norm.rs  substrate.rs
src/aware/attention/: cap_memory.rs  cap_pair.rs  mod.rs  standard.rs
src/aware/cap/: discovered.rs  frozen.rs  gradient.rs  hybrid.rs  matrix.rs  mod.rs
src/aware/cap_native/: attention.rs  block.rs  compression.rs  config.rs  growable_optim.rs  mod.rs  moe.rs  norm.rs  output.rs  substrate.rs
src/aware/discover/: audit.rs  kmeans.rs  mod.rs  no_discovery.rs  random_init.rs
src/aware/layer/: attn_layer.rs  block.rs  cap_layer.rs  ffn_layer.rs  mod.rs
src/aware/train/: feeder.rs  loss.rs  mod.rs  optimizer.rs  trainer.rs
src/data/: bpe.rs  mod.rs
